Add tests, bootstrap shims, CI and dev tooling; apply misc fixes
Добавляет PHPUnit тесты и bootstrap с WP-shim, composer dev deps (phpunit, brain/monkey), CI workflow

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "require-dev": {
         "phpcompatibility/php-compatibility": "*",
         "wp-coding-standards/wpcs": "*",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "phpunit/phpunit": "^9.5",
+        "brain/monkey": "^2.6"
     },
     "config": {
         "allow-plugins": {
