Ignore PHPUnit local cache (.phpunit.result.cache)
Add .phpunit.result.cache to .gitignore and remove from repository index; ignore local test outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 node-modules
 vendor
 roadmap.txt
+.phpunit.result.cache
+
+# Optional local test output files
+test-output.txt
+phpunit-full-output.txt
+test-results.xml
